<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My2048</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yourscores">Yourscors:</string>
    <string name="Hint">Your scores</string>
    <string name="help">Help</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="start">Start</string>

</resources>
