<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/yourscores"
	        android:textSize="25sp"/>
	
	   
	          <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="25sp"/>         
    </LinearLayout>
    
 
     <!--  把Gameview绑定到一起 -->
     <com.example.my2048.Gameview
         android:id="@+id/gameView"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
     </com.example.my2048.Gameview>
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        
        android:orientation="horizontal">

        <Button 
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyle"
            android:text="@string/start"
            />
        
        <Button 
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyle"
            android:text="@string/restart"
            />
        
        <Button 
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyle"
            android:text="@string/help"
            />
        
        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyle"
            android:text="@string/quit"
            />
    </LinearLayout>
     
</LinearLayout>
